istio-service-mash/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: react-vs
  namespace: prod
spec:
  hosts:
  - "*"
  gateways:
  - prod-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: react-frontend.prod.svc.cluster.local
        port:
          number: 80
