istio-service-mash/laravelAuthPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-backend-to-backend
  namespace: prod
spec:
  selector:
    matchLabels:
      app: laravel-backend
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/prod/sa/golang-sa
