istio-service-mash/mongoAuthPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-backends-to-mongodb
  namespace: prod
spec:
  selector:
    matchLabels:
      app: mongodb
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/prod/sa/laravel-sa
        - cluster.local/ns/prod/sa/golang-sa
